--- a/index.html
+++ b/index.html
@@ -36,18 +36,6 @@
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Russian Version -->
     <div id="ru">
       <h1>Исламов Эмиль</h1>
@@ -196,7 +184,7 @@
       // particles.js background
       let isDark = document.body.classList.contains('dark');
       const rootStyles = getComputedStyle(document.documentElement);
-      let accent = rootStyles.getPropertyValue('--accent').trim() || '#2196f3';
+      let accent = rootStyles.getPropertyValue('--accent').trim() || '#1e90ff1f';
       let mainText = rootStyles.getPropertyValue('--main-text').trim() || '#fff';
       let color = isDark ? mainText : accent;
       // Проверка формата цвета
